master conflicts changes

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<!-- Adding changes before rebasing conflicts -->
+<!-- Some new changes from master branch -->
 <head>
-	<title>A Great website</title>
+	<title>New changes</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -13,9 +13,9 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- Junk Text -->
 		<p>
-			Texts and Texts
+			TEST
 		</p>
 	</main>
 	<footer class="container">
