Adding changing after rebasing conflict

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<!-- Some new changes from master branch -->
+<!-- Some changes from master branch -->
 <head>
-	<title>A Great website</title>
+	<title>Simple website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
