--- a/simple.html
+++ b/simple.html
@@ -19,7 +19,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Imad 2014</p>
+		<p>&copy; Git Training 2014</p>
 	</footer>
 </body>
 </html>
